[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/World.gd" type="Script" id=1]
[ext_resource path="res://world/assets/world.png" type="Texture" id=2]
[ext_resource path="res://world/assets/sounds/zombot_on.ogg" type="AudioStream" id=3]
[ext_resource path="res://world/assets/light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 415.853, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.4192, 255.383 )

[sub_resource type="Animation" id=3]
resource_name = "zombots_off"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AmbientLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "zombots_on"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.576471, 0.576471, 0.576471, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AmbientLight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 12.413, 14.2868 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="StaticBody2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 2

[node name="WallNorth" type="CollisionShape2D" parent="Walls"]
position = Vector2( 450.312, 34.1444 )
shape = SubResource( 1 )

[node name="WallSouth" type="CollisionShape2D" parent="Walls"]
position = Vector2( 440.77, 560.493 )
shape = SubResource( 1 )

[node name="WallWest" type="CollisionShape2D" parent="Walls"]
position = Vector2( 39.2876, 297.873 )
shape = SubResource( 2 )

[node name="WallEast" type="CollisionShape2D" parent="Walls"]
position = Vector2( 867.755, 297.873 )
shape = SubResource( 2 )

[node name="ZombotTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpawningPoints" type="Node2D" parent="."]
editor/display_folded = true

[node name="PointNoth" type="Position2D" parent="SpawningPoints"]
position = Vector2( 456.51, 16.6205 )

[node name="PointSouth" type="Position2D" parent="SpawningPoints"]
position = Vector2( 456.51, 582.536 )

[node name="PointEast" type="Position2D" parent="SpawningPoints"]
position = Vector2( 880.946, 296.858 )

[node name="PointWest" type="Position2D" parent="SpawningPoints"]
position = Vector2( 34.7936, 298.218 )

[node name="SpawningTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="SecondsTimer" type="Timer" parent="."]

[node name="PlayerSpawningPoint" type="Position2D" parent="."]
position = Vector2( 457.086, 288.4 )

[node name="ZombotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="AmbientLight" type="Light2D" parent="."]
position = Vector2( 453.126, 287.351 )
scale = Vector2( 0.851375, 0.705898 )
z_index = 100
enabled = false
texture = ExtResource( 4 )
color = Color( 0.729412, 0.156863, 0.156863, 1 )
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/zombots_off = SubResource( 3 )
anims/zombots_on = SubResource( 4 )
[connection signal="timeout" from="ZombotTimer" to="." method="_on_ZombotTimer_timeout"]
[connection signal="timeout" from="SpawningTimer" to="." method="_on_SpawningTimer_timeout"]
[connection signal="timeout" from="SecondsTimer" to="." method="_on_SecondsTimer_timeout"]
